# vla-arm-deployment

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  convert_to_lerobot.py  deploy_vla.py  pyproject.toml  record_demos.py  requirements.txt
Task/franka/: place_bin_ik_rel_env_cfg.py  place_bin_observations.py  stack_ik_rel_env_cfg.py
docs/: faq.md  workflow.md
scripts/: analyze_dataset.py  annotate_demos_local.py  deploy_vla.py  extract_hdf5_videos.py  generate_dataset_local.py  record_demos.py
src/vla_arm_deployment/: __init__.py
src/vla_arm_deployment/utils/: __init__.py  dataset_utils.py
tasks/franka/: __init__.py  bin_stack_joint_pos_env_cfg.py  place_bin_ik_rel_env_cfg.py  place_bin_mimic_env.py  place_bin_mimic_env_cfg.py
