[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "vla-arm-deployment"
dynamic = ["version"]
description = "Teleoperation Recording and VLA Model Deployment Toolkit"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "VLA Arm Deployment Contributors"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.20.0",
    "h5py>=3.0.0",
    "torch>=2.0.0",
    "gymnasium>=0.28.0",
    "tqdm>=4.60.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/vla-arm-deployment"
Repository = "https://github.com/yourusername/vla-arm-deployment"
Issues = "https://github.com/yourusername/vla-arm-deployment/issues"

[tool.setuptools]
packages = ["vla_arm_deployment"]
package-dir = {"" = "src"}

[tool.setuptools_scm]
write_to = "src/vla_arm_deployment/_version.py"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false